Fix issue with text overflow

--- a/src/components/StartSection/TypingText/TypingText.module.css
+++ b/src/components/StartSection/TypingText/TypingText.module.css
@@ -3,7 +3,7 @@
     font-weight: 400;
     margin: 0;
 
-    height: 5rem;
+    min-height: 5rem;
 }
 
 .animated_caret {
